use valueOf instead of Integer constructor